# desafio_domino

./: Dockerfile  estrategia.py  jogada.json  pyproject.toml  run.py  tipos.py
