[tool.poetry]
name = "domino"
version = "0.1.0"
description = ""
authors = ["Erick Menezes <erick@mrmenezes.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
Flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
